syntax = "proto3";
option java_package = "com.huyu.protobuf";
//源文件类名
option java_outer_classname = "PlayerReqProto";

message PlayerReq{
    string player_name = 1;
    string psw = 2;
}